0.1.6 2019-10-21
    - Downgrade class LibXML::ErrorHandler to role LibXML::ErrorHandling.
      This fixes #24; context and error handler object having distinct
      $!suppress-errors and $!suppress-warnings attributes, but not
      propagating these or keping them in sync.
0.1.5 2019-10-18
    - Added $node.findnodes :deref option. Use it in the call from
      the .AT-KEY() method. This changes:
          '$node<species><species/humps>' to a more natural:
          '$node<species><humps>'
0.1.4 2019-10-14
    - [src/dom.c] return HTML xpath keys as lowercase; make them case-insensitive.
0.1.3 2019-10-13
    - [LibXML::Node][LibXML::Node::Set][LibXML::Node::List]
      -- add .xpath-key() method; returns a key that can be used to
        refetch the node in an xpath expression. e.g.
        'comment-node()' for comment nodes.
      -- use .xpath-key() to compute Hash keys. This leads to a
         more natural round-trip, but does change some fixed keys.
         E.g. $elem<#text> is now $elem<text()>
    
0.1.2 2019-10-12
    - [LibXML::DocumentFragment] make .parse() method consistant with LibXML::Document
      -- allow .parse() as a class-level method.
      -- return the document fragment (not an integer status)
      -- rename :repair option to :recover
    - [LibXML::Node::Set][LibXML::Node::List] modify .Str() method to return a
      concatonation of nodes. This can be reparsed as a document fragment
    - [LibXML::Node] add .cononicalize() method for c14n serialization (borrowed
      from libxml-ruby bindings)
0.1.1 2019-10-06
    - [LibXML][LibXML;:Config] add .config-version method; this is the version of
      libxml2 that the module was configured and built against.
    - [LibXML::Node::Set][LibXML::Node::List] - add .first() and .tail() methods
    - [LibXML::Native][LibXML::ErrorHandler]
      -- add xml6_gbl_message_func() - a native wrapper for marshalling formatted
         string arguments from varargs