@@ -18,7 +18,7 @@ method get-flag(UInt $flags, Str:D $k is copy) {
     }
 }
 
-method set-flag(UInt $flags is rw, Str:D $k is copy, Bool() $v) {
+method set-flag(UInt $flags is rw, Str:D $k is copy, Bool() $v, Bool $lax?) {
     $k .= subst("_", "-", :g);
     $flags //= 0;
     with %OPTS{$k} {
@@ -38,16 +38,17 @@ method set-flag(UInt $flags is rw, Str:D $k is copy, Bool() $v) {
             $.set-flag($flags, $k1, ! $v);
         }
         else {
-            fail "unknown parser flag: $k";
+            fail "unknown parser flag: $k"
+                unless $lax;
         }
     }
     $v;
 }
 
-method set-flags($flags is rw, *%opts) {
+method set-flags($flags is rw, Bool :$lax, *%opts) {
     $flags //= 0;
     for %opts.pairs.sort {
-        self.set-flag($flags, .key, .value);
+        self.set-flag($flags, .key, .value, $lax);
     }
     $flags;
 }
